<resources>
    <string name="app_name">DataBase_1</string>
    <string name="lbl_id">Id</string>
    <string name="lbl_name">Nombre</string>
    <string name="lbl_age">Edad</string>
    <string name="lbl_group">Grupo</string>

    <!--Botones-->
    <string name="btn_registrar">Registrar</string>
    <string name="btn_consultar">Consultar</string>
    <string name="btn_eliminar">Eliminar</string>
</resources>
